Apply modifications to refactor code